--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@
     return height - height * 2 / 3 - wizardHeight;
   };
 </script>
-<script src="js/setup.js"></script>
 <script src="js/stat.js"></script>
+<script src="js/setup.js"></script>
+<script src="js/dialog.js"></script>
 <script src="js/game.js"></script>
 
 </body>
