--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 <script src="js/stat.js"></script>
 <script src="js/backend.js"></script>
 <script src="js/render.js"></script>
+<script src="js/load.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/game.js"></script>
