--- a/index.html
+++ b/index.html
@@ -182,31 +182,32 @@
   </div>
 </template>
 
-<script>
-  var fireballSize = 22;
-  var getFireballSpeed = function (left) {
-    return left ? 5 : 2;
-  };
-  var wizardSpeed = 3;
-  var wizardWidth = 70;
-  var getWizardHeight = function (width) {
-    return width * 1.337;
-  };
-  var wizardHeight = getWizardHeight(wizardWidth);
-  var getWizardX = function (width) {
-    return width / 2 - wizardWidth / 2;
-  };
-  var getWizardY = function (height) {
-    return height - height * 2 / 3 - wizardHeight;
-  };
-</script>
-<script src="js/stat.js"></script>
-<script src="js/backend.js"></script>
-<script src="js/render.js"></script>
-<script src="js/load.js"></script>
-<script src="js/setup.js"></script>
-<script src="js/dialog.js"></script>
-<script src="js/game.js"></script>
-
-</body>
+    <script>
+      var fireballSize = 22;
+      var getFireballSpeed = function (left) {
+        return left ? 5 : 2;
+      };
+      var wizardSpeed = 3;
+      var wizardWidth = 70;
+      var getWizardHeight = function (width) {
+        return width * 1.337;
+      };
+      var wizardHeight = getWizardHeight(wizardWidth);
+      var getWizardX = function (width) {
+        return width / 2 - wizardWidth / 2;
+      };
+      var getWizardY = function (height) {
+        return height - height * 2 / 3 - wizardHeight;
+      };
+    </script>
+    <script src="js/stat.js"></script>
+    <script src="js/debounce.js"></script>
+    <script src="js/backend.js"></script>
+    <script src="js/render.js"></script>
+    <script src="js/setup.js"></script>
+    <script src="js/similar.js"></script>
+    <script src="js/load.js"></script>
+    <script src="js/dialog.js"></script>
+    <script src="js/game.js"></script>
+  </body>
 </html>
