--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
     <script src="js/setup.js"></script>
     <script src="js/similar.js"></script>
     <script src="js/dialog.js"></script>
+    <script src="js/avatar.js"></script>
     <script src="js/game.js"></script>
   </body>
 </html>
