--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
       };
     </script>
     <script src="js/stat.js"></script>
+    <script src="js/coordinate.js"></script>
     <script src="js/debounce.js"></script>
     <script src="js/backend.js"></script>
     <script src="js/render.js"></script>
